Header style Adding styles to the header: color & flex elements & background color

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argentina</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="main-container">
         <header>
             <div class="logo">
                 World Cup 2022 Champion
             </div>
-            <ul>
-                <li>Celebrations</li>
-                <li>Players</li>
-                <li>Quotes</li>
+            <ul class="navigation">
+                <li><a href="#">Celebrations</a></li>
+                <li><a href="#">Players</a></li>
+                <li><a href="#">Quotes</a></li>
             </ul>
         </header>
     </section>
