HTML first section The content of the first section of the landing is complete. Now it has title, subtitle, a sing up button and a image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
                 <li><a href="#">Quotes</a></li>
             </ul>
         </header>
+        <div class="section-container">
+            <div class="information">
+                <h2>Argentina</h2>
+                <p>The Argentine soccer team emerged champion after winning an incredible and unforgettable match against France, the last world champion.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="main-image">
+                <img src="./imgs/pexels-alvaro-camacho-14813312.jpg" alt="Argentina World Champion" width="100px" height="100px">
+            </div>
+        </div>
     </section>
 </body>
 </html>
