CSS first section The styles of the first section are complete. Now the landing has color on his texts, button and an image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button>Sign up</button>
             </div>
             <div class="main-image">
-                <img src="./imgs/pexels-alvaro-camacho-14813312.jpg" alt="Argentina World Champion" width="100px" height="100px">
+                <img src="./imgs/pexels-alvaro-camacho-14813312.jpg" alt="Argentina World Champion">
             </div>
         </div>
     </section>
