Style card section Card elements with color

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argentina</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="main-container">
         <header>
@@ -21,7 +23,8 @@
         <div class="section-container">
             <div class="information">
                 <h2>Argentina</h2>
-                <p>The Argentine soccer team emerged champion after winning an incredible and unforgettable match against France, the last world champion.</p>
+                <p>The Argentine soccer team emerged champion after winning an incredible and unforgettable match
+                    against France, the last world champion.</p>
                 <button>Sign up</button>
             </div>
             <div class="main-image">
@@ -29,5 +32,48 @@
             </div>
         </div>
     </section>
+    <section class="second-section">
+        <div class="second-section-title">
+            <h2>Players</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="card-img">
+                    <img src="./imgs/messi.jpeg" alt="">
+                </div>
+                <div class="card-info">
+                    <p><strong>Lionel Messi</strong></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="./imgs/scaloni.jpeg" alt="">
+                </div>
+                <div class="card-info">
+                    <p><strong>Lionel Scaloni</strong></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="./imgs/paredes.jpeg" alt="">
+                </div>
+                <div class="card-info">
+                    <p><strong>Leandro Paredes</strong></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="./imgs/di-maria.jpeg" alt="">
+                </div>
+                <div class="card-info">
+                    <p><strong>Ángel Di María</strong></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="quote-section">
+        <p></p>
+    </section>
 </body>
+
 </html>
