HTML and CSS quote section The elements are complete and also the styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         </div>
     </section>
     <section class="quote-section">
-        <p></p>
+        <div class="quote">
+        <p><em>I never think about the play or visualize anything. I do what comes to me at that moment. Instinct. It has always been that way</em></p>
+        <h4>- Lionel Messi</h4>
+        </div>
     </section>
 </body>
 
