HTML structure last section call to action section. Title, subtitle, sign up button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="main-container">
         <header>
             <div class="logo">
-                World Cup 2022 Champion
+                World Cup 2022
             </div>
             <ul class="navigation">
                 <li><a href="#">Celebrations</a></li>
@@ -34,7 +34,7 @@
     </section>
     <section class="second-section">
         <div class="second-section-title">
-            <h2>Players</h2>
+            <h2>Players & Staff</h2>
         </div>
         <div class="cards">
             <div class="card">
@@ -75,6 +75,17 @@
         <div class="quote">
         <p><em>I never think about the play or visualize anything. I do what comes to me at that moment. Instinct. It has always been that way</em></p>
         <h4>- Lionel Messi</h4>
+        </div>
+    </section>
+    <section class="cta-section">
+        <div class="cta-container">
+            <div class="cta-container-info">
+                <h3>Keep it updated!</h3>
+                <p>Sign up for the latests news of argentina national team</p>
+            </div>
+            <div class="cta-button">
+                <button>Sign up</button>
+            </div>
         </div>
     </section>
 </body>
